--- a/Platform/Src/MMI.Platform/MMI.Facility.Control/MMI.Facility.Control.csproj
+++ b/Platform/Src/MMI.Platform/MMI.Facility.Control/MMI.Facility.Control.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Service\RunningLogicCaculate.cs" />
     <Compile Include="Service\ServiceExtension.cs" />
     <Compile Include="Service\ServiceManager.cs" />
+    <Compile Include="Service\TimeTableProviderService.cs" />
     <Compile Include="Service\ViewService.cs" />
   </ItemGroup>
   <ItemGroup>
