--- a/Platform/Src/MMI.Platform/MMI.Facility.DataType/MMI.Facility.DataType/MMI.Facility.DataType.csproj
+++ b/Platform/Src/MMI.Platform/MMI.Facility.DataType/MMI.Facility.DataType/MMI.Facility.DataType.csproj
@@ -113,6 +113,8 @@
     <Compile Include="Config\SubsystemConfig.cs" />
     <Compile Include="Config\TypeNetConfigBase.cs" />
     <Compile Include="Course\CourseStartParameter.cs" />
+    <Compile Include="Data\TimeTable\TimeTableItem.cs" />
+    <Compile Include="Course\TimeTableParamter.cs" />
     <Compile Include="DataPackage.cs" />
     <Compile Include="Config\AppConfig.cs" />
     <Compile Include="Config\AppLogicConfigCollection.cs" />
