--- a/Platform/Src/MMI.Platform/MMI.Facility.Interface/MMI.Facility.Interface/MMI.Facility.Interface.csproj
+++ b/Platform/Src/MMI.Platform/MMI.Facility.Interface/MMI.Facility.Interface/MMI.Facility.Interface.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Data\Config\Net\NetType.cs" />
     <Compile Include="Data\IUserDebugWindownConfig.cs" />
     <Compile Include="Data\Station\IStationInfo.cs" />
+    <Compile Include="Data\TimeTable\ITimeTableItem.cs" />
     <Compile Include="Event\CourseStateChangedEvent.cs" />
     <Compile Include="Event\UpdateStationCollectionEventArgs.cs" />
     <Compile Include="Extension\AppExtension.cs" />
@@ -182,6 +183,7 @@
     <Compile Include="Service\IIndexDescriptionService.cs" />
     <Compile Include="Service\ICommunicationDataKey.cs" />
     <Compile Include="Service\IStationService.cs" />
+    <Compile Include="Service\ITimeTableProviderService.cs" />
     <Compile Include="Service\IWritableCommunicationDataReadService.cs" />
     <Compile Include="Service\IEventService.cs" />
     <Compile Include="Service\IIndexInterpreter.cs" />
