--- a/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/MMITool.Addin.MMIConfiguration.csproj
+++ b/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/MMITool.Addin.MMIConfiguration.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Controller\AppConfigController.cs" />
     <Compile Include="Converter\NetTypeStringConverter.cs" />
     <Compile Include="Converter\NetDataProtocolTypeToStringConverter.cs" />
+    <Compile Include="Events\ParserConfigCompletedEvent.cs" />
     <Compile Include="Events\SaveConfigCompletedEvent.cs" />
     <Compile Include="Infrastructure\XmlModelDeepCopy.cs" />
     <Compile Include="Interface\IConfigureContentEditerViewModel.cs" />
