1.添加维护界面

--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Urban.GuiYang.DDU.csproj
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Urban.GuiYang.DDU.csproj
@@ -962,6 +962,9 @@
   <ItemGroup>
     <Resource Include="Resources\Image\Details\AirConditionView\Stoped.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="键盘.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
