--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Urban.GuiYang.DDU.csproj
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Urban.GuiYang.DDU.csproj
@@ -461,6 +461,7 @@
     <Compile Include="Controller\Domain\Train\CarPart\AirConditionController.cs" />
     <Compile Include="Controller\Domain\Train\CarPart\BrakeController.cs" />
     <Compile Include="Converter\BottomContentToContentConverter.cs" />
+    <Compile Include="Converter\DoorIndexConverter.cs" />
     <Compile Include="Converter\FloatToTowBrakeConverter.cs" />
     <Compile Include="Converter\TestConverter.cs" />
     <Compile Include="Events\ChangeToInitalizeViewEvent.cs" />
